--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,16 +8,20 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@android:style/Theme.NoTitleBar.Fullscreen" >
-        <activity android:name=".MainActivity">
+        android:theme="@android:style/Theme.NoTitleBar.Fullscreen">
+        <activity android:name=".SplashActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".MainActivity" />
+        <activity android:name=".SubActivity" />
+        <activity android:name=".HomeActivity" />
+        <activity android:name=".Button1Activity" />
+        <activity android:name=".Button2Activity" />
+        <activity android:name=".Button3Activity"></activity>
     </application>
 
 </manifest>
-
-
